# crate-vscode-generator

./: Cargo.toml  LICENSE.md  README.md
src/: error.rs  lib.rs  main.rs  prelude.rs  tools.rs
src/package/: category.rs  contributes.rs  engines.rs  license.rs  mod.rs  package.rs  readme.rs  repository.rs  version.rs
src/snippets/: mod.rs  snippet.rs  snippets.rs  snippets_doc.rs
tests/: main.rs
