[package]
name = "vscode-generator"
description = "The Visual Studio Code package generator [BETA]"
version = "0.1.2"
edition = "2021"
authors = ["DrakeN-inc <t.me/DrakeN_inc>"]
license = "MIT"
repository = "https://github.com/DrakeN-inc/crate-add-macro"

[dependencies]
chrono = "0.4.38"
md5 = "0.7.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
